--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^4.3.5",
     "bootstrap": "^5.3.8",
     "cobe": "^0.6.5",
     "react": "^19.2.4",
